# Training-final-assessment

./: .gitignore  GEMINI.md  main.py  pyproject.toml
activity_logs/: models.py  serializers.py  urls.py  utils.py  views.py
activity_logs/migrations/: 0001_initial.py
analytics/: apps.py  jobs.py  models.py  serializers.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
authentication/: choices.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_userprofile_address_alter_userprofile_city_and_more.py  0003_alter_userprofile_user_type.py
config/: settings.py  urls.py
orders/: choices.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
utils/: custom_renderer.py
